# pyMCR

./: .gitignore  pyproject.toml
pymcr/: __init__.py  condition.py  constraints.py  mcr.py  metrics.py  regressors.py
pymcr/tests/: test_condition.py  test_constraints.py  test_external_regressors.py  test_mcr.py  test_mcr_sklearn_like.py  test_metrics.py  test_regressors.py
