[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyMCR"
version = "0.5.1"
description = "Multivariate Curve Resolution in Python"
authors = ["Charles H. Camp Jr. <charles.camp@nist.gov>"]
license = "LICENSE.md"
readme = "README.rst"

homepage = "https://pages.nist.gov/pyMCR/"
documentation = "https://pages.nist.gov/pyMCR/"
repository = "https://github.com/usnistgov/pyMCR"

classifiers=[
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Physics'
    ]
    
[tool.poetry.urls]
changelog = "https://github.com/usnistgov/pyMCR/blob/master/CHANGELOG.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.24"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
tbump = "^6.9.0"
isort = "^5.12.0"
black = "^23.1.0"
pytest = "^7.2.1"

